# JobPilot-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  pyproject.toml
app/: __init__.py  main.py
app/agent/: __init__.py
app/api/: routes.py
app/providers/: __init__.py  jobs.py  project_files.py
app/schemas/: __init__.py  application.py  base.py  candidate.py  common.py  evidence.py  job.py  matching.py  state.py  tool_inputs.py  tool_outputs.py
app/services/: __init__.py
app/tools/: __init__.py  evidence.py  jobs.py
data/: jobs.json
docs/: AGENT_SPEC.md  ARCHITECTURE.md  DECISIONS.md  PRD.md  TOOL_CONTRACTS.md
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_health.py  test_local_job_tools.py  test_project_evidence_tool.py
tests/unit/: __init__.py
tests/unit/providers/: __init__.py  test_jobs.py  test_project_files.py
tests/unit/schemas/: test_application.py  test_candidate.py  test_common.py  test_job.py  test_matching.py  test_state.py  test_tool_inputs.py  test_tool_outputs.py
tests/unit/tools/: __init__.py  test_evidence.py  test_jobs.py
