[build-system]
requires = ["setuptools>=69,<81"]
build-backend = "setuptools.build_meta"

[project]
name = "jobpilot-agent"
version = "0.1.0"
description = "JobPilot Python scaffold with a minimal FastAPI health endpoint."
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic>=2.9,<3.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "pytest-cov>=5.0,<6.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.6,<1.0",
    "mypy>=1.11,<2.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q -p no:cacheprovider"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
files = ["app"]
sqlite_cache = false
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true

[tool.coverage.run]
data_file = "coverage-data"
